<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_show_hide" android:title="@string/Menu_HideOff"
		android:alphabeticShortcut="o" android:visible="false"
		android:icon="@android:drawable/ic_menu_delete" android:showAsAction="ifRoom"/>

	<item android:id="@+id/menu_connect" android:title="@string/Menu_connect"
		android:alphabeticShortcut="c"
		android:icon="@drawable/ic_menu_plug"/>

	<item android:id="@+id/menu_add_friend" android:title="@string/Menu_addFriend"
		android:alphabeticShortcut="a"
		android:icon="@android:drawable/ic_menu_add" />

	<item android:id="@+id/menu_add_room" android:title="@string/Menu_addRoom"
		android:alphabeticShortcut="r"
		android:icon="@android:drawable/ic_menu_add" />
	
	<item android:id="@+id/menu_status" android:title="@string/Menu_Status"
		android:alphabeticShortcut="s" android:icon="@android:drawable/ic_menu_myplaces"
		android:showAsAction="never" android:visible="false" />

	<item android:id="@+id/menu_settings" android:title="@string/Menu_Settings"
		android:alphabeticShortcut="p"
		android:icon="@android:drawable/ic_menu_preferences" />

	<item android:id="@+id/menu_register" android:title="@string/StartupDialog_create_new"
		android:icon="@android:drawable/ic_menu_agenda" android:visible="false" />
	
	<item android:id="@+id/menu_about" android:title="@string/Menu_about"
		android:alphabeticShortcut="y" android:visible="false" android:icon="@drawable/about" />
	
	<item android:id="@+id/menu_sync" android:title="@string/Menu_sync" />
	
	<item android:id="@+id/menu_web_login" android:title="@string/Menu_webLogin" />
	
	<item android:id="@+id/menu_exit" android:title="@string/Global_Exit"
		android:alphabeticShortcut="x"
		android:icon="@android:drawable/ic_menu_close_clear_cancel" />
	
	
</menu>
